# nnabla-ext-cuda

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  NOTICE  NOTICE.md  readme.md
build-tools/cmake/: get_cuda_version.cmake  get_nnabla_cpu_lib.py  get_nnabla_dir.py  select_compute_arch.cmake
build-tools/code_generator/: dl_head_generate.py  dl_mpi_generate.py  dl_nccl_generate.py  function_types.yaml  function_types_cudnn.yaml  generate.py  generate2.py  load_implements_rst.py  solver_types.yaml
build-tools/make/: build-with-docker.mk  build.mk  hpcx_url.mk  options.mk
build-tools/msvc/: 00_prepare.bat  build.bat  build_cpplib.bat  build_wheel.bat  clean.bat  cmake.bat  cmake_cuda.bat  cmake_cudnn.bat  local-config.cmd.in  pytest.bat  test.bat
build-tools/scripts/: gpu_info.py  nvidia-docker.sh  update_gpu_list.py
doc/: developer-guide.toc  implements.rst  installation.toc  user-guide.toc
doc/contributing/: add_function.md  add_solver.md
docker/: Dockerfile  Dockerfile.develop-centos6  Dockerfile.develop-ubuntu16.04  Dockerfile.develop-ubuntu16.04-py3  Dockerfile.runtime  Dockerfile.runtime-multi-gpu  READEME.md  README.md
docker/dev/: Dockerfile
docker/development/: .entrypoint-hpcx.sh  Dockerfile.build  Dockerfile.build-mpi  Dockerfile.build-mpi-ppc64le  Dockerfile.build-multi-gpu  Dockerfile.build-multi-gpu-ppc64le  Dockerfile.build-ppc64le  Dockerfile.build.in  Dockerfile.cuda-cudnn-lib-in-wheel-test  Dockerfile.runtime-multi-gpu  generate_dockerfile.py
docker/py2/: Dockerfile  Dockerfile.develop-centos6  Dockerfile.develop-centos7  Dockerfile.develop-ubuntu14.04  Dockerfile.develop-ubuntu16.04  Dockerfile.runtime-centos6  Dockerfile.runtime-centos7  Dockerfile.runtime-ubuntu14.04  Dockerfile.runtime-ubuntu16.04
docker/py2-cuda80/: Dockerfile
docker/py3/: Dockerfile  (+4 more)
examples/cpp/mnist_collection/: CMakeLists.txt  GNUmakefile  README.md  train_dcgan_cuda.cpp  train_lenet_classifier_cuda.cpp  train_resnet_classifier_cuda.cpp  train_siamese_cuda.cpp  train_vae_cuda.cpp  train_vat_cuda.cpp
examples/cpp/mnist_training/: CMakeLists.txt  GNUmakefile  README.md  main.cpp
examples/cpp/semantic_infer/: CMakeLists.txt  GNUmakefile  README.md  semantic.cpp
python/: pytest.ini  requirements.txt  setup.cfg.build-wheel.in  setup.cfg.in  setup.py
src/nbla/cuda/: CMakeLists.txt  common.cpp  cublas.cpp  cuda.cpp  cuda_memory.cpp  cusolver.cpp  event.cpp  init.cpp.tmpl  nvtx.cpp  version.cpp.tmpl
src/nbla/cuda/array/: cuda_array.cpp  cuda_array.cu  cuda_dlpack_array.cpp  cuda_dlpack_array.cu
src/nbla/cuda/communicator/: data_parallel_communicator.cu  dl_mpi.cpp  dl_nccl.cpp.tmpl  multi_process_data_parallel_communicator.cu  watch_dog.cpp
src/nbla/cuda/cudnn/: cudnn.cmake  cudnn.cpp  init.cpp.tmpl
src/nbla/cuda/cudnn/function/: add2.cu  average_pooling.cu  batch_normalization.cu  convolution.cu  deconvolution.cu  function_types.cu.tmpl  max_pooling.cu  relu.cu  sigmoid.cu  softmax.cu  tanh.cu
src/nbla/cuda/cudnn/function/generic/: add2.cu  affine_grid.cu  average_pooling.cu  batch_normalization.cu  convolution.cu  deconvolution.cu  function_impl.cu.tmpl  fused_batch_normalization.cu  group_normalization.cu  gru.cu  instance_normalization.cu  layer_normalization.cu  log_softmax.cu  lstm.cu  max_pooling.cu  mean.cu  prod.cu  relu.cu  rnn.cu  sigmoid.cu  softmax.cu  sum.cu  sum_pooling.cu  sync_batch_normalization.cu  tanh.cu  tensor_normalization.cu  warp_by_grid.cu  weight_standardization.cu
src/nbla/cuda/cudnn/function/utils/: base_pooling-internal.hpp
src/nbla/cuda/function/: abs.cu  absolute_error.cu  add2.cu  add_scalar.cu  affine.cu  batch_matmul.cu  batch_normalization.cu  bc_add2.cu  binary_connect_affine.cu  binary_connect_convolution.cu  binary_cross_entropy.cu  binary_error.cu  binary_sigmoid.cu  binary_tanh.cu  binary_weight_affine.cu  binary_weight_convolution.cu  broadcast.cu  categorical_cross_entropy.cu  celu.cu  clip_grad_by_value.cu  concatenate.cu  convolution.cu  crelu.cu  deconvolution.cu  depthwise_convolution.cu  depthwise_deconvolution.cu  div2.cu  dropout.cu  elu.cu  embed.cu  epsilon_insensitive_loss.cu  equal.cu  equal_scalar.cu  exp.cu  fixed_point_quantize.cu  flip.cu  function_types.cu.tmpl  greater.cu  greater_equal.cu  greater_equal_scalar.cu  (+66 more)
src/nbla/cuda/function/generic/: abs.cu  absolute_error.cu  acos.cu  acosh.cu  adaptive_separable_convolution.cu  add2.cu  add_n.cu  add_scalar.cu  affine.cu  affine_grid.cu  arange.cu  asin.cu  asinh.cu  assign.cu  atan.cu  atan2.cu  atanh.cu  batch_cholesky.cu  batch_det.cu  batch_inv.cu  batch_log_det.cu  batch_logdet.cu  batch_matmul.cu  batch_normalization.cu  bc_add2.cu  binary_connect_affine.cu  binary_connect_convolution.cu  binary_cross_entropy.cu  binary_error.cu  binary_sigmoid.cu  binary_tanh.cu  binary_weight_affine.cu  binary_weight_convolution.cu  bool_fill.cu  bool_gather.cu  bool_scatter.cu  broadcast.cu  categorical_cross_entropy.cu  ceil.cu  celu.cu  (+160 more)
src/nbla/cuda/function/generic/kernel/: batch_det.cu  batch_normalization.cu  cumprod.cu  sync_batch_normalization.cu
src/nbla/cuda/lms/: swap_in_out_scheduler.cpp
src/nbla/cuda/memory/: cuda_memory.cpp  cuda_virtual_memory.cpp
src/nbla/cuda/solver/: adadelta.cu  adagrad.cu  adam.cu  adamax.cu  momentum.cu  nesterov.cu  rmsprop.cu  sgd.cu  solver_types.cu.tmpl  weight_decay.cu
src/nbla/cuda/solver/generic/: adabelief.cu  adabound.cu  adadelta.cu  adagrad.cu  adam.cu  adamax.cu  adamw.cu  amsbound.cu  amsgrad.cu  clip_grad.cuh  lamb.cu  lars.cu  lion.cu  mixed_precision_training.cuh  momentum.cu  nesterov.cu  rmsprop.cu  rmsprop_graves.cu  rmspropgraves.cu  sgd.cu  sgdw.cu  weight_decay.cuh
src/nbla/cuda/test/: multi_process_data_parallel_communicator.cu  non_stop_kernel.cu  non_stop_kernel.cuh  test_async_flag.cpp  test_cached_device_prop.cpp  test_dl_mpi.cpp  test_dl_nccl.cpp  test_multi_process_data_parallel_communicator.cpp  test_multi_thread_training.cpp  test_nbla_cuda_utils.cpp  test_watch_dog.cpp
src/nbla/cuda/utils/: random.cpp  random.cu  reduce.cu  scan_setup.cu
(+529 files in other folders)
