add_executable(train_lenet_classifier_cuda train_lenet_classifier_cuda.cpp)
add_executable(train_resnet_classifier_cuda train_resnet_classifier_cuda.cpp)
add_executable(train_vae_cuda train_vae_cuda.cpp)
add_executable(train_dcgan_cuda train_dcgan_cuda.cpp)
add_executable(train_siamese_cuda train_siamese_cuda.cpp)
add_executable(train_vat_cuda train_vat_cuda.cpp)
find_package(ZLIB REQUIRED)
include_directories(${ZLIB_INCLUDE_DIRS})
include_directories(${NNABLA_DIR}/examples/cpp/mnist_collection)
target_link_libraries(train_lenet_classifier_cuda nnabla nnabla_cuda ${ZLIB_LIBRARIES})
set_property(TARGET train_lenet_classifier_cuda PROPERTY CXX_STANDARD 11)
target_link_libraries(train_resnet_classifier_cuda nnabla nnabla_cuda ${ZLIB_LIBRARIES})
set_property(TARGET train_resnet_classifier_cuda PROPERTY CXX_STANDARD 11)
target_link_libraries(train_vae_cuda nnabla nnabla_cuda ${ZLIB_LIBRARIES})
set_property(TARGET train_vae_cuda PROPERTY CXX_STANDARD 11)
target_link_libraries(train_dcgan_cuda nnabla nnabla_cuda ${ZLIB_LIBRARIES})
set_property(TARGET train_dcgan_cuda PROPERTY CXX_STANDARD 11)
target_link_libraries(train_siamese_cuda nnabla nnabla_cuda ${ZLIB_LIBRARIES})
set_property(TARGET train_siamese_cuda PROPERTY CXX_STANDARD 11)
target_link_libraries(train_vat_cuda nnabla nnabla_cuda ${ZLIB_LIBRARIES})
set_property(TARGET train_vat_cuda PROPERTY CXX_STANDARD 11)
